Add option "pause"